--- a/Newsletter-2/public2/css/styles.css
+++ b/Newsletter-2/public2/css/styles.css
@@ -1,6 +1,10 @@
 html,
 body {
   height: 100%;
+   background-color: #E4E9FD;
+  background-image: -webkit-linear-gradient(65deg, #a9e383 30%, #fde8e4 70%);
+  min-height: 1000px;
+  font-family: 'helvetica neue';
 }
 
 body {
